--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,10 +3,12 @@ h1 {
 }
 
 h2 {
+    font-size: 1.5em;
     text-align: center;
 }
 
 h3 {
+    font-size: 1.2em;
     text-align: center;
 }
 
@@ -14,5 +16,5 @@ h3 {
     margin-top: 1em;
     width: 100%;
     height: 600px;
-    border: 1px solid red;
+    border: 1px solid grey;
 }
