--- a/src/components/app-root/AppHeader/AppHeader.css
+++ b/src/components/app-root/AppHeader/AppHeader.css
@@ -1,5 +1,7 @@
 .AppHeader {
-    padding: 1em 0;
+    margin: 0 0 0.5em 0;
+    padding: 1em 0 0.5em 0;
+    border-bottom: 1px solid #004660;
 }
 
 .AppHeader .logo {
