--- a/src/components/app-root/App/App.css
+++ b/src/components/app-root/App/App.css
@@ -9,10 +9,10 @@ h2 {
 
 h3 {
     font-size: 1.2em;
-    text-align: center;
+    text-align: left;
 }
 
-p {
+.MainSelectors p {
     margin: 0;
 }
 
