--- a/src/components/maps/NcwmsColourbar/NcwmsColourbar.module.css
+++ b/src/components/maps/NcwmsColourbar/NcwmsColourbar.module.css
@@ -12,12 +12,12 @@
     margin-bottom: 0px;
 }
 
-.values {
+.ticks {
     position: relative;
     height: 20px;
 }
 
-.values span {
+.ticks span {
     font-size: 90%;
     position: absolute;
     top: -10px;
@@ -25,16 +25,4 @@
     padding-left: 3px;
     line-height: 0px;
     padding-top: 10px;
-}
-
-.left {
-    left: 0%;
-}
-
-.middle {
-    left: 50%;
-}
-
-.right {
-    left: 100%;
 }
