Refactor data range selection

--- a/src/components/maps/NcwmsColourbar/NcwmsColourbar.module.css
+++ b/src/components/maps/NcwmsColourbar/NcwmsColourbar.module.css
@@ -5,11 +5,6 @@
     width: 320px;  /* for nominal 300px height */
 }
 
-.wrapper .label {
-    text-align: center;
-    margin-bottom: -0.4rem;
-}
-
 .wrapper .image {
     transform: rotate(90deg);
     transform-origin: bottom right;
@@ -32,8 +27,14 @@
     padding-top: 10px;
 }
 
-.wrapper .note {
+.label {
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: -0.4rem;
+}
+
+.note {
     font-size: 80%;
     text-align: center;
-    margin-top: -0.75rem;
+    /*margin-top: -0.75rem;*/
 }
