--- a/src/components/maps/NcwmsColourbar/NcwmsColourbar.module.css
+++ b/src/components/maps/NcwmsColourbar/NcwmsColourbar.module.css
@@ -6,38 +6,55 @@
 .allColours {
     margin-left: auto;
     margin-right: auto;
+    border: 1px solid lightgrey;
 }
 
 .image {
     display: inline-block;
     position: relative;
-    top: 5px;
     transform: rotate(90deg);
     transform-origin: bottom right;
     margin-bottom: 0px;
 }
 
 .belowabove {
+    position: relative;
     display: inline-block;
 }
 
+.belowabove span {
+    font-size: 90%;
+    color: white;
+    mix-blend-mode: difference;
+}
+
 .ticks {
+    display: inline-block;
     position: relative;
     height: 20px;
     width: 800px;
-    margin-left: auto;
-    margin-right: auto;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
 }
 
 .ticks span {
     font-size: 90%;
     position: absolute;
     top: 0px;
-    border-left: 1px solid darkgrey;
+    border-left: 1px solid black;
     padding-left: 3px;
     line-height: 0px;
     padding-top: 10px;
     padding-bottom: 0px;
+}
+
+.xxx {
+    position: relative;
+    display: inline-block;
+    top: -1.7em;
+    font-size: 90%;
+    color: white;
+    mix-blend-mode: exclusion;
 }
 
 .label {
