Remove bold text from partition

--- a/src/components/data-displays/Matrix/ImpactsMatrix.css
+++ b/src/components/data-displays/Matrix/ImpactsMatrix.css
@@ -82,6 +82,6 @@ td {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
+    padding: 2px;
     color: #000;
 }
